--- a/front-end/src/Styles/dataCard.scss
+++ b/front-end/src/Styles/dataCard.scss
@@ -15,6 +15,7 @@
 }
 
 .data-card {
+  width: 100%;
   display: flex;
   flex-direction: column;
   min-height: 20.75em;
@@ -22,8 +23,8 @@
   border-radius: .5em;
   text-decoration: none;
   background: white;
-  margin: 1em;
-  padding: 2.75em 2.5em;
+  // margin: 1em;
+  padding: 1.5em .50em;
   box-shadow: 0 1.5em 1.5em -.5em rgba(#000000, .1);
   transition: transform .45s ease, background .45s ease;
   
@@ -68,6 +69,7 @@
     line-height: 1.2;
     margin: auto 0 0;
     transition: color .45s ease;
+    padding: .50em;
 
     svg {
       margin-left: .5em;
@@ -80,7 +82,7 @@
   }
   
   &:hover {
-    background: rgb(28, 101, 211);
+    background: rgb(9, 37, 51);
     transform: scale(1.02);
     
     h3 {
@@ -131,7 +133,7 @@
   }  
   
   .data-card {
-    width: 244px;
+    width: 364px;
     display: flex;
     flex-direction: column;
     min-height: 20.75em;
@@ -140,7 +142,7 @@
     text-decoration: none;
     background: white;
     margin: 1em;
-    padding: 1em 1em;
+    padding: 0.50em 0.75em;
     box-shadow: 0 1.5em 2.5em -.5em rgba(#000000, .1);
     transition: transform .45s ease, background .45s ease;
     
@@ -150,6 +152,7 @@
       font-weight: 600;
       line-height: 1;
       padding-bottom: .5em;
+      padding-left: 0.1em;
       margin: 0 0 0.142857143em;
       border-bottom: 2px solid rgb(28, 101, 211);
       transition: color .45s ease, border .45s ease;
@@ -196,7 +199,7 @@
     }
     
     &:hover {
-      background: rgb(28, 101, 211);
+      background: rgb(9, 37, 51);
       transform: scale(1.02);
       
       h3 {
