--- a/front-end/src/Styles/products.css
+++ b/front-end/src/Styles/products.css
@@ -141,7 +141,7 @@ body{
   }
   
   #add-to-cart-btn{
-    background-color: rgb(78, 111, 218);
+    background-color:  rgb(9, 37, 51);
     border: none;
     border-radius: 8px;
     color: rgb(255, 255, 255);
@@ -175,7 +175,7 @@ body{
 
 
 #back-btn{
-  background-color: rgb(78, 111, 218); 
+  background-color: rgb(9, 37, 51); 
   border: none;
   color: rgb(255, 255, 255);
   padding: 15px 16px;
@@ -200,7 +200,7 @@ body{
 }
 
 .modal-button {
-  background-color: rgb(78, 111, 218);
+  background-color:  rgb(9, 37, 51);
   border: none;
   color: rgb(255, 255, 255);
   padding: 15px 32px;
@@ -248,7 +248,7 @@ body{
  }
  
  #add-to-cart-btn{
-   background-color: rgb(0, 0, 0);
+   background-color:  rgb(9, 37, 51);
    border: none;
    border-radius: 8px;
    color: rgb(255, 255, 255);
@@ -267,7 +267,7 @@ body{
  }
 
  .restaurant-details{
-   color: rgb(78, 111, 218);
+   color:  rgb(9, 37, 51);
    font-size: 12px;
    padding: 65px;
    text-align: center;
